added sorting svg icons

--- a/example/main.css
+++ b/example/main.css
@@ -48,7 +48,9 @@ body {
 .btn-primary {
   @apply bg-blue-400;
 }
-
+.btn-icon {
+  @apply flex items-center hover:bg-slate-200 disabled:bg-gray-400 ml-1 p-1.5  rounded-lg  shadow-2xl text-sm w-auto cursor-pointer;
+}
 .search {
   @apply rounded shadow-md text-sm h-8 w-full;
 }
