added filters button in example

--- a/example/main.css
+++ b/example/main.css
@@ -56,11 +56,17 @@ body {
 .btn-primary {
   @apply bg-blue-400;
 }
+.btn-warning {
+  @apply bg-amber-400;
+}
 
 .btn-icon {
   @apply flex items-center hover:bg-slate-200 disabled:bg-gray-400 ml-1 p-1.5  rounded-lg  shadow-2xl text-sm w-auto cursor-pointer;
 }
 
 .search {
-  @apply rounded shadow-md text-sm h-8 w-full;
+  @apply form-input rounded shadow-md text-sm h-8 w-full;
+}
+.input{
+  @apply form-input rounded-md shadow w-80 my-2 mx-1;
 }
